--- a/app_simple_client/Makefile
+++ b/app_simple_client/Makefile
@@ -21,24 +21,15 @@ APP_NAME =
 XCC_FLAGS = -O3
 
 # The USED_MODULES variable lists other module used by the application. 
-USED_MODULES = module_xtcp.2v0 module_ethernet.1v4 module_locks.1v1
+USED_MODULES = module_xtcp module_ethernet module_locks
 
 # This uses the tcp mac filtering in module_xtcp
 USE_XTCP_MAC_CUSTOM_FILTER=1
 
+
 #=============================================================================
 # The following part of the Makefile includes the common build infrastructure
 # for compiling XMOS applications. You should not need to edit below here.
--include ../module_xcommon/build/Makefile.common
--include ../../xcommon/module_xcommon/build/Makefile.common
 
-# The final target of the build. This is usually dependent on a binary file
-# in the $(BIN_DIR) directory e.g.
-#
-#  all : $(BIN_DIR)/my_app.xe
-
-all: $(BIN_DIR)/$(APP_NAME).xe
-	@echo Build Complete
-
-
-clean: clean_common
+XMOS_MAKE_PATH ?= ../..
+include $(XMOS_MAKE_PATH)/xcommon/module_xcommon/build/Makefile.common
