--- a/app_pip_bootloader/Makefile
+++ b/app_pip_bootloader/Makefile
@@ -1,6 +1,6 @@
 TARGET = XP-ETHERNET-TEST
 APP_NAME =
-XCC_FLAGS = -Os -g -report -lxscope \
+XCC_FLAGS = -Os -g -report \
             -DPIP_DHCP -DPIP_UDP -DPIP_ARP -DPIP_TFTP
 USED_MODULES = module_pip module_mii_singlethread
 
