--- a/app_pip_test/Makefile
+++ b/app_pip_test/Makefile
@@ -3,7 +3,8 @@ TARGET = XP-DSC-BLDC
 
 APP_NAME =
 XCC_FLAGS = -Os -g -report  -save-temps \
-            -DPIP_ICMP -DPIP_DHCP -DPIP_UDP -DPIP_ARP -DPIP_TCP -DPIP_TFTP
+            -DPIP_ICMP -DPIP_DHCP -DPIP_UDP -DPIP_ARP -DPIP_TCP -DPIP_TFTP \
+			-DPIP_GATEWAY -DPIP_LINK_LOCAL
 USED_MODULES = module_pip module_mii_singlethread
 
 
