First version of CONNECT, and included support for pip_conf.h

--- a/app_pip_test/Makefile
+++ b/app_pip_test/Makefile
@@ -2,9 +2,7 @@ TARGET = XP-DSC-BLDC
 # TARGET = XP-MC-CTRL-L2
 
 APP_NAME =
-XCC_FLAGS = -Os -g -report  -save-temps \
-            -DPIP_ICMP -DPIP_DHCP -DPIP_UDP -DPIP_ARP -DPIP_TCP -DPIP_TFTP \
-			-DPIP_GATEWAY -DPIP_LINK_LOCAL
+XCC_FLAGS = -Os -g -report  -save-temps
 USED_MODULES = module_pip module_mii_singlethread
 
 
