--- a/app_pip_bootloader/Makefile
+++ b/app_pip_bootloader/Makefile
@@ -1,7 +1,7 @@
 TARGET = XP-ETHERNET-TEST
 APP_NAME =
 XCC_FLAGS = -Os -g -report 
-USED_MODULES = module_pip module_mii_singlethread
+USED_MODULES = module_pip module_mii_singlethread module_ethernet_smi
 
 
 #=============================================================================
