Completed separation of SMI and MII

--- a/.cproject
+++ b/.cproject
@@ -42,6 +42,10 @@
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip/src}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server}&quot;' />
                                 </option>
                                 <inputType id="com.xmos.cdt.xc.compiler.input.56447172" name="XC Sources" superClass="com.xmos.cdt.xc.compiler.input" />
                                 <option id="gnu.c.compiler.option.include.paths.2854749" valueType="includePath" superClass="gnu.c.compiler.option.include.paths">
@@ -68,6 +72,10 @@
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip/src}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server}&quot;' />
                                 </option>
                             </tool>
                             <tool id="com.xmos.cdt.xc.compiler.base.73453196" name="com.xmos.cdt.xc.compiler.base" superClass="com.xmos.cdt.xc.compiler.base">
@@ -95,6 +103,10 @@
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip/src}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server}&quot;' />
                                 </option>
                                 <option id="com.xmos.c.compiler.option.include.paths.83975402" valueType="includePath" superClass="com.xmos.c.compiler.option.include.paths">
                                     <listOptionValue builtIn="false" value='&quot;${XMOS_DOC_PATH}/../target/include&quot;' />
@@ -120,6 +132,10 @@
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip/src}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server}&quot;' />
                                 </option>
                             </tool>
                             <tool id="com.xmos.cdt.c.compiler.base.68257933" name="com.xmos.cdt.c.compiler.base" superClass="com.xmos.cdt.c.compiler.base">
@@ -147,6 +163,10 @@
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip/src}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server}&quot;' />
                                 </option>
                                 <option id="com.xmos.c.compiler.option.include.paths.32330641" valueType="includePath" superClass="com.xmos.c.compiler.option.include.paths">
                                     <listOptionValue builtIn="false" value='&quot;${XMOS_DOC_PATH}/../target/include&quot;' />
@@ -172,6 +192,10 @@
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip/src}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server}&quot;' />
                                 </option>
                             </tool>
                             <tool id="com.xmos.cdt.cpp.compiler.base.26693281" name="com.xmos.cdt.cpp.compiler.base" superClass="com.xmos.cdt.cpp.compiler.base">
@@ -199,6 +223,10 @@
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip/src}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server}&quot;' />
                                 </option>
                                 <option id="com.xmos.c.compiler.option.include.paths.16627019" valueType="includePath" superClass="com.xmos.c.compiler.option.include.paths">
                                     <listOptionValue builtIn="false" value='&quot;${XMOS_DOC_PATH}/../target/include&quot;' />
@@ -224,6 +252,10 @@
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip/src}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server}&quot;' />
                                 </option>
                             </tool>
                             <tool id="com.xmos.cdt.core.assembler.base.24520274" name="com.xmos.cdt.core.assembler.base" superClass="com.xmos.cdt.core.assembler.base">
@@ -251,6 +283,10 @@
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip/src}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server}&quot;' />
                                 </option>
                                 <option id="com.xmos.c.compiler.option.include.paths.42681785" valueType="includePath" superClass="com.xmos.c.compiler.option.include.paths">
                                     <listOptionValue builtIn="false" value='&quot;${XMOS_DOC_PATH}/../target/include&quot;' />
@@ -276,6 +312,10 @@
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip/src}&quot;' />
                                     <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_xtcp/module_pip}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_ethernet_smi}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server/src}&quot;' />
+                                    <listOptionValue builtIn="false" value='&quot;${workspace_loc:/sc_ethernet/module_mii_singlethread_server}&quot;' />
                                 </option>
                             </tool>
                         </toolChain>
