--- a/test_2_thread_example/Makefile
+++ b/test_2_thread_example/Makefile
@@ -1,28 +1,7 @@
-# The TARGET variable determines what target system the application is 
-# compiled for. It either refers to an XN file in the source directories
-# or a valid argument for the --target option when compiling.
-
 TARGET ?= XP-MC-CTRL-L2
-
-# The APP_NAME variable determines the name of the final .xe file. It should
-# not include the .xe postfix. If left blank the name will default to 
-# the project name
-
 APP_NAME =
-
-# The flags passed to xcc when building the application
-# You can also set the following to override flags for a particular language:
-#
-#    XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
-#
-# If the variable XCC_MAP_FLAGS is set it overrides the flags passed to 
-# xcc for the final link (mapping) stage.
-
 XCC_FLAGS = -g -O3 -lxscope
-
-# The USED_MODULES variable lists other module used by the application. 
-
-USED_MODULES = module_xtcp module_mii_singlethread
+USED_MODULES = module_xtcp module_mii_singlethread module_ethernet_smi
 
 USE_XTCP_MAC_CUSTOM_FILTER = 1
 
