Update metainfo, fix build issues

--- a/experimental/app_pip_test/Makefile
+++ b/experimental/app_pip_test/Makefile
@@ -3,7 +3,14 @@ TARGET = XP-DSC-BLDC
 
 APP_NAME =
 XCC_FLAGS = -Os -g -report -save-temps -lxscope
-USED_MODULES = module_pip module_mii_singlethread module_ethernet_smi
+USED_MODULES = module_pip module_ethernet module_ethernet_smi module_otp_board_info
+
+# This change to the module path is so that this application can be in the
+# tests sub-directory in it's git repo
+ifeq ($(notdir $(abspath ..)),experimental)
+PATHSEP = $(if $(findstring Windows, $(OS))$(findstring WINDOWS,$(OS)),;,:)
+XMOS_MODULE_PATH := $(XMOS_MODULE_PATH)$(PATHSEP)../../..
+endif
 
 
 #=============================================================================
