--- a/app_simple_webserver/Makefile
+++ b/app_simple_webserver/Makefile
@@ -2,7 +2,7 @@
 # compiled for. It either refers to an XN file in the source directories
 # or a valid argument for the --target option when compiling.
 
-TARGET = XR-AVB-LC-BRD
+TARGET = SLICEKIT-L2
 
 # The APP_NAME variable determines the name of the final .xe file. It should
 # not include the .xe postfix. If left blank the name will default to 
@@ -21,7 +21,7 @@ APP_NAME =
 XCC_FLAGS = -O3 -save-temps -g -report -Xmapper --map -Xmapper MAPFILE
 
 # The USED_MODULES variable lists other module used by the application. 
-USED_MODULES = module_xtcp module_ethernet module_locks
+USED_MODULES = module_xtcp module_ethernet_board_support
 
 
 #=============================================================================
