--- a/app_webserver_separate_mac/.project
+++ b/app_webserver_separate_mac/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-    <name>module_tftp</name>
+    <name>app_webserver_separate_mac</name>
     <comment></comment>
     <projects>
     </projects>
